<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Codepunk, LLC
  ~ Author(s): Scott Slater
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- region Application -->

    <string name="app_name">Codepunk</string>

    <!-- endregion Application -->

    <!-- region Common -->

    <string name="common_about">About</string>

    <string name="common_accounts">Accounts</string>

    <string name="common_email">Email</string>

    <string name="common_enabled">Enabled</string>

    <string name="common_disabled">Disabled</string>

    <string name="common_log_in">Log in</string>

    <string name="common_log_out">Log out</string>

    <string name="common_password">Password</string>

    <string name="common_settings">Settings</string>

    <string name="common_username">Username</string>

    <!-- endregion Common -->

    <!-- region Environments -->

    <string name="env_dev">Development</string>

    <string name="env_local">Local</string>

    <string name="env_prod">Production</string>

    <!-- endregion Environments -->

    <!-- region Auth -->

    <string name="auth_auth">Authentication</string>

    <string name="auth_already_have_account_label">Already have an account?</string>

    <string name="auth_choose_account_label">Choose an account:</string>

    <string name="auth_confirm_password">Confirm password</string>

    <string name="auth_forgot_password">Forgot password</string>

    <string name="auth_forgot_password_instructions">Please provide the email address you specified during registration and we\'ll send you a password reset link.</string>

    <string name="auth_forgot_your_password">Forgot your password?</string>

    <string name="auth_new_user_label">New user?</string>

    <string name="auth_sign_up">Sign up</string>

    <string name="auth_username_or_email">Username or email</string>

    <!-- region Settings -->

    <string name="settings_about">@string/common_about</string>

    <string name="settings_about_summary">Version %s</string>

    <string name="settings_accounts">@string/common_settings</string>

    <string name="settings_add_or_change_account">Add or change account</string>

    <string name="settings_dev_options_base_url_dialog_title">Set base URL</string>

    <string name="settings_dev_options_base_url_hint">e.g., http://newurl.com</string>

    <string name="settings_dev_options_disable_dialog_message">All connections will be reset and the app will revert to the launch screen.</string>

    <string name="settings_dev_options_disable_dialog_title">Disable developer options?</string>

    <string name="settings_dev_options_incorrect_password">Incorrect password</string>

    <string name="settings_dev_options_now_a_developer">You are now a developer!</string>

    <string name="settings_dev_options_override_base_url">Override base URL</string>

    <string name="settings_dev_options_override_base_url_summary_default">Use default URL</string>

    <string name="settings_dev_options_redundant_show_request">No need, developer options are already unlocked</string>

    <string name="settings_dev_options_password_dialog_message">Enter the password to enable developer options:</string>

    <string name="settings_dev_options_password_dialog_title">Developer password</string>

    <string name="settings_dev_options_password_hint">Password</string>

    <plurals name="settings_dev_options_steps_from_unlocking">
        <item quantity="one">You are now %d step away from unlocking developer options!</item>
        <item quantity="other">You are now %d steps away from unlocking developer options!</item>
    </plurals>

    <string name="settings_developer_options">Developer options</string>

    <string name="settings_log_out">@string/common_log_out</string>

    <string name="settings_log_out_dialog_message">You will be logged out of %1$s.</string>

    <string name="settings_log_out_dialog_title">Are you sure?</string>

    <string name="settings_remote_environment">Auth environment</string>

    <string name="settings_settings">@string/common_settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- endregion Settings -->

</resources>
