<!--
  ~ Copyright (C) 2019 Codepunk, LLC
  ~ Author(s): Scott Slater
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- TODO Make some "inverse" styles? -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_screen_horizontal"
            android:paddingLeft="@dimen/margin_screen_horizontal"
            android:paddingTop="@dimen/margin_screen_vertical"
            android:paddingEnd="@dimen/margin_screen_horizontal"
            android:paddingRight="@dimen/margin_screen_horizontal"
            android:paddingBottom="@dimen/margin_screen_vertical"
            tools:context="com.codepunk.core.presentation.auth.RegisterFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="username"
                android:textColorHint="?android:textColorHintInverse"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_text_color_primary_inverse_24dp"
                    android:drawableLeft="@drawable/ic_person_text_color_primary_inverse_24dp"
                    android:drawablePadding="@dimen/size_s"
                    android:hint="@string/common_username"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:textColor="?android:textColorPrimaryInverse"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_default"
                android:tag="email"
                android:textColorHint="?android:textColorHintInverse"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail_text_color_primary_inverse_24dp"
                    android:drawableLeft="@drawable/ic_mail_text_color_primary_inverse_24dp"
                    android:drawablePadding="@dimen/size_s"
                    android:hint="@string/common_email"
                    android:inputType="textEmailAddress"
                    android:textColor="?android:textColorPrimaryInverse"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_default"
                android:tag="password"
                android:textColorHint="?android:textColorHintInverse"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_text_color_primary_inverse_24dp"
                    android:drawableLeft="@drawable/ic_lock_text_color_primary_inverse_24dp"
                    android:drawablePadding="@dimen/size_s"
                    android:hint="@string/common_password"
                    android:inputType="textPassword"
                    android:textColor="?android:textColorPrimaryInverse"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_default"
                android:tag="confirm_password"
                android:textColorHint="?android:textColorHintInverse"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_text_color_primary_inverse_24dp"
                    android:drawableLeft="@drawable/ic_lock_text_color_primary_inverse_24dp"
                    android:drawablePadding="@dimen/size_s"
                    android:hint="@string/auth_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="?android:textColorPrimaryInverse"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/already_have_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/auth_already_have_account_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"/>

            <Space
                android:id="@+id/already_have_account_space"
                android:layout_width="@dimen/size_ml"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/already_have_account_txt"
                app:layout_constraintEnd_toEndOf="@id/already_have_account_txt"
                app:layout_constraintTop_toTopOf="@id/already_have_account_txt"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_default"
                android:background="?android:attr/selectableItemBackground"
                android:minHeight="48dp"
                android:padding="@dimen/size_default"
                android:text="@string/common_log_in"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                app:layout_constraintBaseline_toBaselineOf="@id/already_have_account_txt"
                app:layout_constraintStart_toStartOf="@id/already_have_account_space"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
